--- a/front end/assets/css/styles.css
+++ b/front end/assets/css/styles.css
@@ -182,7 +182,7 @@ tr:hover {
 /* Modal Styles */
 .modal {
     display: none;
-    position: fixed;
+    position: absolute;
     z-index: 1000;
     left: 0;
     top: 0;
